# matrix-biblebot

./: .coderabbit.yml  .coveragerc  .dockerignore  .gitignore  =13.0.0  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  PR_SUMMARY_TEMP.md  README.md  TESTING.md  bible.py  biblegateway.conf  biblegateway_api.py  codecov.yml  esvbible.py  example_mmrelay_config.yaml  fix_test_timestamps.py  junit.xml  main-alt.py  main.py  plugin.py  pyproject.toml  pytest.ini  renovate.json  requirements-e2e.txt  requirements.txt  sample-docker-compose.source.yaml  sample-docker-compose.yaml  sample_config.yaml  setup.cfg  setup.py  temporary.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  docker-validate.yml  full-test-suite.yml  pypi-publish.yml  python-tests.yml  release.yml  test-and-coverage.yml
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
docs/: CONFIGURATION.md  DEVELOPMENT.md  E2EE.md  TROUBLESHOOTING.md
docs/dev/: TESTING.md
docs/superpowers/plans/: 2026-04-17-direct-only-trigger-cleanup.md  2026-04-17-trigger-policy.md
src/biblebot/: __init__.py  auth.py  bible_constants.py  bot.py  cli.py  constants.py  log_utils.py  paths.py  setup_utils.py  triggers.py  update_check.py  validation.py
src/biblebot/constants/: __init__.py  api.py  app.py  bible.py  config.py  logging.py  matrix.py  messages.py  system.py  update.py
src/biblebot/integrations/: __init__.py  mmrelay.py
src/biblebot/tools/: __init__.py  sample.env  sample_config.yaml
src/matrix_biblebot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_async_patterns.py  test_auth.py  test_bot.py  test_bot_config.py  test_cli.py  test_config_env.py  test_configuration_patterns.py  test_constants.py  test_e2ee_integration.py  test_edge_cases.py  test_error_message_handling.py  test_integration.py  test_integration_patterns.py  test_log_utils.py  test_matrix_utils.py  test_monitoring_patterns.py  test_paths.py  test_performance.py  test_performance_patterns.py  test_regex_cache.py  test_reliability_patterns.py  test_scalability_patterns.py  test_security_patterns.py  test_setup_utils.py  test_tools.py  test_trigger_policy.py  test_update_check.py
