[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-biblebot"
dynamic = ["version"]
description = "A simple Matrix bot that fetches Bible verses"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
requires-python = ">=3.10"
authors = [{ name = "Jeremiah K", email = "jeremiahk@gmx.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Topic :: Communications",
]
dependencies = [
  "matrix-nio==0.25.2",
  "PyYAML==6.0.3",
  "python-dotenv==1.2.2",
  "aiohttp==3.13.5",
  "rich==15.0.0",
  "packaging==26.1",
]

[project.optional-dependencies]
e2e = ["matrix-nio[e2e]==0.25.2"]
test = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "pytest-aiohttp==1.1.0",
  "coverage==7.13.5",
]

[project.urls]
Homepage = "https://github.com/jeremiah-k/matrix-biblebot"
Repository = "https://github.com/jeremiah-k/matrix-biblebot"
Issues = "https://github.com/jeremiah-k/matrix-biblebot/issues"

[project.scripts]
biblebot = "biblebot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "biblebot.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"biblebot.tools" = ["*.yaml", "*.service"]
