[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-biblebot"
dynamic = ["version"]
description = "A simple Matrix bot that fetches Bible verses"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
requires-python = ">=3.10"
authors = [{ name = "Jeremiah K", email = "jeremiahk@gmx.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Topic :: Communications",
]
dependencies = [
  "matrix-nio==0.26.0",
  "PyYAML==6.0.3",
  "python-dotenv==1.2.2",
  "aiohttp==3.14.3",
  "rich==15.0.0",
  "packaging==26.2",
]

[project.optional-dependencies]
e2e = ["matrix-nio[e2e]==0.26.0"]
test = [
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "pytest-aiohttp==1.1.1",
  "coverage==7.15.2",
]

[project.urls]
Homepage = "https://github.com/jeremiah-k/matrix-biblebot"
Repository = "https://github.com/jeremiah-k/matrix-biblebot"
Issues = "https://github.com/jeremiah-k/matrix-biblebot/issues"

[project.scripts]
biblebot = "biblebot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "biblebot.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"biblebot.tools" = ["*.yaml", "*.service"]
