[metadata]
name = matrix-biblebot
version = 0.1.0
author = Jeremiah K
author_email = jeremiahk@gmx.com
description = A simple Matrix bot that fetches Bible verses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeremiah-k/matrix-biblebot
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Communications

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    matrix-nio
    requests
    pyaml
    httpx
    python-dotenv
    aiohttp
    asyncio

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    biblebot = biblebot.cli:main
